# DevJournal

./: README.md
api/: .env  .env.example  README.md  pyproject.toml
api/app/: __init__.py  config.py  database.py  main.py
api/app/routers/: health.py
electron-app/: README.md  electron-builder.yml  package.json  pnpm-lock.yaml  tsconfig.main.json  vite.config.ts
electron-app/src/main/: authServer.ts  main.ts
electron-app/src/preload/: preload.ts
electron-app/src/renderer/: App.tsx  AuthCallback.tsx  electron.d.ts  index.css  index.html
electron-app/src/renderer/components/: Dashboard.css  Dashboard.tsx  Login.css  Login.tsx
electron-app/src/renderer/contexts/: AuthContext.tsx
supabase/: config.toml
