[project]
name = "devjournal-api"
version = "0.1.0"
description = "DevJournal FastAPI Backend"
authors = [
    {name = "Thomas Vrolix"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "fastapi (>=0.125.0,<0.126.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "sqlalchemy[asyncio] (>=2.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "alembic (>=1.17.2,<2.0.0)",
    "pydantic (>=2.5.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "supabase (>=2.27.0,<3.0.0)",
    "pygithub (>=2.8.1,<3.0.0)",
    "anthropic (>=0.75.0,<0.76.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
black = "^25.12.0"
ruff = "^0.14.9"

